--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
