--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.19",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.1"
   }
 }
